--- a/src/Style/Footer.css
+++ b/src/Style/Footer.css
@@ -1,9 +1,11 @@
 .blackBar {
   background-color: #241f20;
   position: fixed;
-  width: 100vw;
+  width: 100%;
   bottom: 0px;
+  left: 0;
   height: 50px;
+  text-align: center;
 }
 .textButton,
 .leftTextButton {
@@ -11,7 +13,7 @@
   font-size: 27px;
   font-weight: 500;
   font-family: oswald;
-  height: 100% !important;
+  /* height: 100% !important; */
 }
 .textButton:hover {
   cursor: pointer;
@@ -32,12 +34,12 @@
 }
 .grey {
   background-color: grey;
-  padding-top: 0.8em;
+  padding-top: 8px;
 }
 /* .leftTextButton {
   color: white;
   margin: 1%;
-  font-size: 3vh;
+  font-size: 18px;
   font-weight: 500;
   margin-top: 1.5%;
   margin-bottom: 1%;
@@ -49,7 +51,7 @@
 @media only screen and (min-width: 768px) {
   .grey {
     background-color: grey;
-    padding-top: 0.2em;
+    padding-top: 3px;
   }
 
   .textButton {
@@ -69,7 +71,7 @@
   .blackBar {
     background-color: #241f20;
     position: fixed;
-    width: 115vw;
+    width: 1570px;
     bottom: 0px;
     height: auto;
   }
@@ -82,54 +84,62 @@
   .textButton:hover {
     cursor: pointer;
   }
-  .textButtonDisabled {
+  /* .textButtonDisabled {
     color: #707070;
     margin: 1%;
-    font-size: 3vh;
+    font-size: 18px;
     font-weight: 400;
-    margin-top: 0.2em;
+    margin-top: 3px;
     margin-bottom: 3%;
     font-family: oswald;
-    margin-left: 48vw;
-  }
+    margin-left: 655px;
+  } */
   .textButtonDisabled:hover {
     cursor: not-allowed;
   }
   .mobileHalfButton {
-    width: 60vw;
+    width: 820px;
   }
   .mobileSaveAndProceed {
-    width: 0vw;
+    width: 0;
   }
   .mobileSaveMargin {
-    margin-left: 33vw;
+    margin-left: 450px;
   }
   .grey {
     background-color: grey;
-    padding-top: 0.2em;
-    width: 14em;
-    height: 14.6vw;
+    padding-top: 3px;
+    width: 224px;
+    /* height: 200px; */
     position: fixed;
     bottom: 0;
   }
   .emptyWidth {
-    width: 0vw;
+    width: 0;
   }
   /* .leftTextButton {
     color: white;
     margin: 1%;
-    font-size: 3vh;
+    font-size: 18px;
     font-weight: 400;
     margin-top: 1.5%;
     margin-bottom: 1%;
     font-family: oswald;
-    width: 40vw;
-    margin-left: 1.5em;
+    width: 546px;
+    margin-left: 24px;
   } */
   .leftTextButton:hover {
     cursor: pointer;
   }
   .mobileLeftMargin {
-    margin-left: 10.5em;
+    margin-left: 138px;
   }
+
 }
+@media (max-width: 639px) {
+.textButton, .leftTextButton, .textButtonDisabled{font-size: 22px;}  
+}
+@media (max-width: 567px) {
+.blackBar{width: 100%;}
+}
+
