--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -1,8 +1,7 @@
-.fontOswald1 {
+/* .fontOswald1 {
   font-family: oswald;
   font-size: 110%;
 }
-
 .mobileHead {
   margin-left: -15vw;
   background: #e8e0dd;
@@ -20,8 +19,7 @@
   margin-top: -11vh;
   margin-left: -2.5vh;
 }
-.mobileStepperOveflow {
-}
+
 .AgreementHeader {
   font-size: 1.3em;
   font-weight: 200;
@@ -29,4 +27,24 @@
   background: #e8e0dd;
   margin-left: 3em;
   margin-top: -3.5em;
+} */
+
+.LogoIcon svg {
+  width: 320px;
+  height: auto;
 }
+
+
+
+.MuiPaper-root{background: transparent !important;}
+
+@media (max-width: 1199px) {
+  .LogoIcon svg{width: 265px;height: 100px;}
+}
+@media (max-width: 991px) {
+  .LogoIcon svg{width: 100%;height: 70px;}
+}
+
+@media (max-width: 480px) {
+  .LogoIcon svg{height: 50px;}
+}  
