--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -27,6 +27,10 @@
 .HomeContainer {
   padding-bottom: 60px;
 }
+.HomeBackButton {
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 550px) {
   .mobileMargin {
     margin-bottom: 10vh;
