--- a/src/Style/PurchaseKit.css
+++ b/src/Style/PurchaseKit.css
@@ -19,7 +19,7 @@
   padding: 16px;
   font-family: Domine;
   /* width: 65vw; */
-  width: 1248px;
+  width: 65vw;
 }
 .subTotalText {
   font-size: 20px;
@@ -39,8 +39,8 @@
   background: #241f20;
   padding: 15px;
   font-family: Domine;
-  /* width: 65vw; */
-  width: 1248px;
+  width: 65vw;
+  /* width: 1248px; */
 }
 .ResultText {
   font-size: 24px;
@@ -81,7 +81,7 @@
   border-width: 1px;
   border-color: #d8c5a6 !important;
   border-radius: 0 !important;
-  width: 576px !important;
+  width: 550px !important;
   height: 64px !important;
   margin-bottom: 8px;
 }
@@ -92,7 +92,7 @@
   border-width: 1px;
   border-color: red !important;
   border-radius: 0 !important;
-  width: 576px !important;
+  width: 550px !important;
   height: 64px !important;
   margin-bottom: 8px;
 }
@@ -114,7 +114,7 @@
   border-width: 1px;
   border-color: #d8c5a6 !important;
   border-radius: 0 !important;
-  width: 250px !important;
+  width: 260px !important;
   height: 64px !important;
   margin-bottom: 8px;
 }
@@ -125,7 +125,7 @@
   border-width: 1px;
   border-color: red !important;
   border-radius: 0 !important;
-  width: 250px !important;
+  width: 260px !important;
   height: 64px !important;
   margin-bottom: 8px;
 }
@@ -157,9 +157,10 @@
   border-width: 1px;
   border-color: #d8c5a6 !important;
   border-radius: 0 !important;
-  width: 250px !important;
+  width: 260px !important;
   height: 64px !important;
   margin-bottom: 8px;
+  margin-left: 45px !important;
 }
 .purchaseInput2:focus {
   border-color: #d8c5a6 !important;
@@ -168,9 +169,10 @@
   border-width: 1px;
   border-color: red !important;
   border-radius: 0 !important;
-  width: 250px !important;
+  width: 260px !important;
   height: 64px !important;
   margin-bottom: 8px;
+  margin-left: 45px !important;
 }
 .purchaseRed2:focus {
   border-color: red !important;
