--- a/src/Style/Agreement.css
+++ b/src/Style/Agreement.css
@@ -105,6 +105,7 @@
 .acceptAgreement {
   margin-top: 1em;
   font-weight: bold;
+  margin-bottom: 2em;
 }
 .checkBoxAccept {
   margin-top: -0.2em !important;
